<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wj.study.modules.design.EditTextActivity">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/app_compat_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45dp"
        android:hint="@string/username"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="@android:color/darker_gray"
        tools:text="wangjiang" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/text_input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="@android:color/darker_gray"
        tools:text="1234567890" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAppearance="@android:style/TextAppearance"
            android:textColor="@android:color/darker_gray" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
